# ottrin

./: .gitignore  AI_STATE.md  BUILD_DIAGNOSIS.md  BUILD_FIX_INSTRUCTIONS.md  Cargo.toml  PLANS.md  README.md  ROADMAP.md  build-errors.txt
.github/workflows/: ci.yml  release.yml
crates/ottrin-app/: Cargo.toml
crates/ottrin-app/src/: main.rs
crates/ottrin-copy/: Cargo.toml
crates/ottrin-copy/src/: lib.rs
crates/ottrin-core/: Cargo.toml
crates/ottrin-core/src/: lib.rs
crates/ottrin-platform/: Cargo.toml
crates/ottrin-platform/src/: lib.rs
crates/ottrin-preview/: Cargo.toml
crates/ottrin-preview/src/: lib.rs
crates/ottrin-search/: Cargo.toml
crates/ottrin-search/src/: db.rs  lib.rs
crates/ottrin-ui/: Cargo.toml
crates/ottrin-ui/src/: lib.rs
docs/: AI_AGENT_RULES.MD  CONFIG_MIGRATION.md  CRASH_REPORTING.md  ENGINEERING.md  PACKAGING.md  PERFORMANCE.md  PRIVILEGED_OPERATIONS.md  PRIVILEGED_QA.md  PROJECT.md  RELEASE_CHECKLIST.md  ROADMAP.md  SHOW_HN.md  THEME_SOURCES.md
packaging/linux/: org.ottrin.filesystem.policy
