[workspace]
members = [
  "crates/ottrin-app",
  "crates/ottrin-core",
  "crates/ottrin-platform",
  "crates/ottrin-copy",
  "crates/ottrin-preview",
  "crates/ottrin-ui",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["hoozter <hello@hoozter.com>"]
repository = "https://github.com/hoozter/ottrin"
homepage = "https://hoozter.com"
description = "A fast, keyboard-friendly file manager built with Rust and egui."

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tracing = "0.1"
egui = "0.33"
eframe = { version = "0.33", default-features = true }
egui_extras = { version = "0.33", features = ["svg", "image"] }

[profile.dev]
opt-level = 1

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
