[package]
name = "ottrin-preview"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
ottrin-core = { path = "../ottrin-core" }
thiserror.workspace = true
serde.workspace = true
zip = { version = "2", default-features = false, features = ["deflate"] }
lofty = { version = "0.22", default-features = false }
lopdf = "0.34"
