[package]
name = "ottrin-search"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
ottrin-core = { path = "../ottrin-core" }
thiserror.workspace = true
serde.workspace = true
rusqlite = { version = "0.31", features = ["bundled"] }
regex = "1"
notify = "8"
globset = "0.4"
walkdir = "2"
serde_json = "1"
