[package]
name = "ottrin-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
ottrin-core = { path = "../ottrin-core" }
ottrin-copy = { path = "../ottrin-copy" }
ottrin-preview = { path = "../ottrin-preview" }
ottrin-platform = { path = "../ottrin-platform" }
egui.workspace = true
eframe.workspace = true
egui_extras.workspace = true
serde_json = "1"
