[package]
name = "ottrin-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
ottrin-core = { path = "../ottrin-core" }
ottrin-copy = { path = "../ottrin-copy" }
ottrin-preview = { path = "../ottrin-preview" }
ottrin-platform = { path = "../ottrin-platform" }
ottrin-search = { path = "../ottrin-search" }
egui.workspace = true
eframe.workspace = true
egui_extras.workspace = true
serde_json = "1"
rfd = "0.15"
image = "0.25"
sha2 = "0.10"
